# SCEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.18  CMakeLists.txt.user.2.5pre1  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.83e347f  CMakeLists.txt.user.e714ddb.3.3-pre1  CMakeLists.txt.user.fd87bd7  README.md  build_unity.sh
QtProject/SCEngineQT/: SCEngineQT.pro
SCE_Assets/: BillboardCapture.shader  Blur_Box.shader  Blur_Box_H.shader  Blur_Box_V.shader  CopyShadowMap.shader  DebugShader.shader  DeferredLighting.shader  DirectionalLight.shader  EmptyShader.shader  LightShafts.shader  LuminanceShader.shader  SkyShader.shader  SunShader.shader  TerrainTess.shader  TextDebug.shader  ToneMapping.shader  lightingUniforms.shader  standardLighting.shader
SCE_Assets/Meshes/: low_poly_tree.obj_convert.normals  low_poly_tree.obj_convert.uvs
SCE_Assets/Terrain/: PineTree.shader  ShadowPass.shader  TerrainTess.shader  Tree.material  Tree.shader  TreeImpostor.shader
SCE_Assets/Terrain/Meshes/: ConvertAllMeshes.sh  low_poly_tree.obj_convert.bitangents  low_poly_tree.obj_convert.tangents  pine.obj_convert.bitangents  pine.obj_convert.indices  pine.obj_convert.normals  pine.obj_convert.tangents  pine.obj_convert.uvs  pine.obj_convert.vertices  tree_lod0.obj_convert.indices  tree_lod0.obj_convert.vertices  tree_lod1.obj_convert.bitangents  tree_lod1.obj_convert.indices  tree_lod1.obj_convert.normals  tree_lod1.obj_convert.tangents  tree_lod1.obj_convert.uvs  tree_lod1.obj_convert.vertices  tree_lod2.obj_convert.bitangents  tree_lod2.obj_convert.indices  tree_lod2.obj_convert.normals  tree_lod2.obj_convert.tangents  tree_lod2.obj_convert.uvs  tree_lod2.obj_convert.vertices  tree_lod3.obj_convert.bitangents  tree_lod3.obj_convert.indices  tree_lod3.obj_convert.normals  tree_lod3.obj_convert.tangents  tree_lod3.obj_convert.uvs  tree_lod3.obj_convert.vertices
SCE_Assets/Terrain/Textures/: pine.texData  terrainDirt.texData  terrainGrass.texData  terrainGravel.texData  terrainSnow.texData  treeImpostor.texData  treeImpostorNormal.texData
SCE_Assets/Terrain/TreePack/: ConvertAllMeshes.sh  Tree.material  Tree.shader  TreeInstanced_leaves.shader  TreeInstanced_trunk.shader
SCE_Assets/Textures/: terrainGrass.texData
common/: objloader.cpp  objloader.hpp  quaternion_utils.cpp  quaternion_utils.hpp  shader.hpp  tangentspace.cpp  tangentspace.hpp  texture.cpp
headers/: Camera.hpp  Component.hpp  Container.hpp  GameObject.hpp  Handle.hpp  HandleTarget.hpp  InternalComponent.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  SCE.hpp  SCEAssimpLoader.hpp  SCEBillboardRender.hpp  SCECore.hpp  SCEDebug.hpp  SCEDebugText.hpp  SCEDefines.hpp  SCEEvent.hpp  SCEFrustrumCulling.hpp  SCEHandle.hpp  SCEHandleTarget.hpp  SCEInput.hpp  SCEInternal.hpp  SCEInternalComponent.hpp  SCELighting.hpp  SCEMacros.hpp  SCEMeshLoader.hpp  SCEMeshRender.hpp  SCEMetadataParser.hpp  SCEPerlin.hpp  SCEPostProcess.hpp  SCEQuality.hpp  SCERender.hpp  SCERenderStructs.hpp  SCEScene.hpp  SCEShaders.hpp  SCEShadowMap.hpp  SCESkyRenderer.hpp  SCETerrain.hpp  (+13 more)
playground/: CameraControl.cpp  CameraControl.hpp  LookAtTarget.cpp  LookAtTarget.hpp  PlayerControl.cpp  PlayerControl.hpp  Rotator.cpp  Rotator.hpp  SunCycle.cpp  SunCycle.hpp  playground  playground.cpp
playground/ressources/: 76970-1.png.texData  Debug.material  Debug.shader  GroundMaterial.material  GroundShader.shader  TestMaterial.material  TestShader-forward.shader  TestShader.shader  WallMaterial.material  diffuse-thread.jpg.texData  diffuse-wall.jpg.texData  normal-bubble.jpg.texData  normal-thread.jpg.texData  normal-wall.jpg.texData  textsuzanne.png.texData  texture.jpg.texData  texture.png.texData
playground/ressources/Materials/: CobbleStone2.material  Eagle.material  GroundMaterial.material  House.material  Plane.material  Rex.material  Scorpion.material  TestMaterial.material  Tree.material  UVDebug.material  WallMaterial.material  Water.material
playground/ressources/Meshes/: CobbleStones2.obj_convert.bitangents  CobbleStones2.obj_convert.indices  CobbleStones2.obj_convert.normals  CobbleStones2.obj_convert.tangents  CobbleStones2.obj_convert.uvs  CobbleStones2.obj_convert.vertices  ConvertAllMeshes.sh  EAGLE_2.OBJ_convert.bitangents  EAGLE_2.OBJ_convert.indices  EAGLE_2.OBJ_convert.normals  EAGLE_2.OBJ_convert.tangents  EAGLE_2.OBJ_convert.uvs  EAGLE_2.OBJ_convert.vertices  EAGLE_3.OBJ_convert.bitangents  EAGLE_3.OBJ_convert.indices  EAGLE_3.OBJ_convert.normals  EAGLE_3.OBJ_convert.tangents  EAGLE_3.OBJ_convert.uvs  EAGLE_3.OBJ_convert.vertices  Eurofighter.obj_convert.bitangents  Eurofighter.obj_convert.indices  Eurofighter.obj_convert.normals  Eurofighter.obj_convert.tangents  Eurofighter.obj_convert.uvs  Eurofighter.obj_convert.vertices  Goku.obj_convert.bitangents  Goku.obj_convert.indices  Goku.obj_convert.normals  Goku.obj_convert.tangents  Goku.obj_convert.uvs  Goku.obj_convert.vertices  GringottsDragon.obj_convert.bitangents  GringottsDragon.obj_convert.indices  GringottsDragon.obj_convert.normals  GringottsDragon.obj_convert.tangents  GringottsDragon.obj_convert.uvs  GringottsDragon.obj_convert.vertices  RB-SideSwipe.obj_convert.indices  (+42 more)
shaders/: Debug.fragmentshader  Debug.vertexshader
sources/: Camera.cpp  Component.cpp  Container.cpp  GameObject.cpp  InternalComponent.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  SCEAssimpLoader.cpp  SCEBillboardRender.cpp  SCECore.cpp  SCEDebug.cpp  SCEDebugText.cpp  SCEFrustrumCulling.cpp  SCEInput.cpp  SCEInternal.cpp  SCELighting.cpp  SCEMeshLoader.cpp  SCEMeshRender.cpp  SCEMetadataParser.cpp  SCEPerlin.cpp  SCEPostProcess.cpp  SCEQuality.cpp  SCERender.cpp  SCEScene.cpp  SCEShaders.cpp  SCEShadowMap.cpp  SCESkyRenderer.cpp  SCETerrain.cpp  SCETerrainShadow.cpp  SCETerrainTrees.cpp  SCETextRenderer.cpp  SCETexture.cpp  SCETextures.cpp  SCETime.cpp  SCEToneMapping.cpp  SCETools.cpp  SCE_GBuffer.cpp  SCE_GLDebug.cpp  (+2 more)
templates/: Container.tpp  Handle.tpp  Material.tpp  SCEHandle.tpp
unity_build/: SCE.cpp  playground_unity.cpp
(+199 files in other folders)
